--- a/_config.yml
+++ b/_config.yml
@@ -88,7 +88,7 @@ author:
   employer         :
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?user=MrkJP-4AAAAJ&hl=en"         # Update with the correct link to your profile
-  email            :
+  email            : jingyi.jenna.chen@outlook.com
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
