--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Jingyi Chen"
+  name             : "Dr. Jingyi Chen"
   avatar           : "Chen.jpg"
   bio              : "Earth Scientist at Pacific Northwest National Laboratory"
   pronouns         : # example: "she/her"
@@ -88,7 +88,7 @@ author:
   employer         :
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?user=MrkJP-4AAAAJ&hl=en"         # Update with the correct link to your profile
-  email            : jingyi.jenna.chen@outlook.com
+  email            : "jingyi.jenna.chen@outlook.com"
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
