--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Dr. Jingyi Chen"
-  avatar           : "Chen.jpg"
+  avatar           : "WechatIMG115.jpg"
   bio              : "Professor at Nanjing University of Information Science and Technology"
   pronouns         : # example: "she/her"
   location         : #"Location"
